src/objects/bupl__BP_GrowthDriver__c.object
<CustomObject>
    <fields>
        <fullName>acpl__gf_account_planning_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Planning</label>
        <referenceTo>acpl__Account_Planning__c</referenceTo>
        <relationshipLabel>Growth Drivers</relationshipLabel>
        <relationshipName>Growth_Drivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bupl__country_id__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Compass</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>Paraguay</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Uruguay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bupl__gf_business_growth_rec_number__c</fullName>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bupl__gf_business_plan_growth_name__c</fullName>
        <formula>HYPERLINK( &quot;/lightning/r/BusinessPlan_GrowthDriver__c/&quot; + Id + &quot;/view&quot;,&quot;Driver - &quot; + TEXT(bupl__gf_business_growth_rec_number__c) + &quot; &quot; + bupl__gf_business_plan_id__r.bupl__participant_id__r.Name,
&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bupl__gf_business_plan_id__c</fullName>
        <label>Business Plan</label>
        <referenceTo>bupl__BusinessPlan__c</referenceTo>
        <relationshipLabel>Growth Drivers</relationshipLabel>
        <relationshipName>Growth_Drivers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bupl__gf_growth_drvr_prdt_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bupl__solution_category_desc__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>bupl__solution_category_id__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Préstamo comercial CP (manual)</fullName>
                </value>
                <value>
                    <fullName>Préstamo comercial CP</fullName>
                </value>
                <value>
                    <fullName>Comex importación (manual)</fullName>
                </value>
                <value>
                    <fullName>Comex importación</fullName>
                </value>
                <value>
                    <fullName>Comex exportación (manual)</fullName>
                </value>
                <value>
                    <fullName>Comex exportación</fullName>
                </value>
                <value>
                    <fullName>Forfaiting</fullName>
                </value>
                <value>
                    <fullName>Letras (manual)</fullName>
                </value>
                <value>
                    <fullName>Letras</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>Préstamo comercial LP (manual)</fullName>
                </value>
                <value>
                    <fullName>Préstamo comercial LP</fullName>
                </value>
                <value>
                    <fullName>Leasing (manual)</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Carta fianza técnica (manual)</fullName>
                </value>
                <value>
                    <fullName>Carta fianza técnica</fullName>
                </value>
                <value>
                    <fullName>Carta fianza económica (manual)</fullName>
                </value>
                <value>
                    <fullName>Carta fianza económica</fullName>
                </value>
                <value>
                    <fullName>Stand by</fullName>
                </value>
                <value>
                    <fullName>Carta de crédito de importación</fullName>
                </value>
                <value>
                    <fullName>Carta de crédito de exportación</fullName>
                </value>
                <value>
                    <fullName>Vista PJ</fullName>
                </value>
                <value>
                    <fullName>Depósito a plazo</fullName>
                </value>
                <value>
                    <fullName>Pago a proveedores</fullName>
                </value>
                <value>
                    <fullName>Pago de haberes</fullName>
                </value>
                <value>
                    <fullName>Net Cash</fullName>
                </value>
                <value>
                    <fullName>FX</fullName>
                </value>
                <value>
                    <fullName>Forward</fullName>
                </value>
                <value>
                    <fullName>PFL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bupl__solution_category_id__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financiamiento a corto plazo</fullName>
                </value>
                <value>
                    <fullName>Riesgo de firma</fullName>
                </value>
                <value>
                    <fullName>Recursos</fullName>
                </value>
                <value>
                    <fullName>Serv. Transaccionales</fullName>
                </value>
                <value>
                    <fullName>Tesorería</fullName>
                </value>
                <value>
                    <fullName>Programa financiero</fullName>
                </value>
                <value>
                    <fullName>Corporate Finance</fullName>
                    <isActive>false</isActive>
                    <label>Corporate Finance</label>
                </value>
                <value>
                    <fullName>Global Finance</fullName>
                    <isActive>false</isActive>
                    <label>Global Finance</label>
                </value>
                <value>
                    <fullName>Global Markets</fullName>
                    <isActive>false</isActive>
                    <label>Global Markets</label>
                </value>
                <value>
                    <fullName>Global Transaction Banking</fullName>
                    <isActive>false</isActive>
                    <label>Global Transaction Banking</label>
                </value>
                <value>
                    <fullName>Others</fullName>
                    <isActive>false</isActive>
                    <label>Others</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Growth Driver</label>
    <nameField>
        <displayFormat>GD_{YYYY}/{MM}-{0000}</displayFormat>
        <label>Growth Driver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Growth Drivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>